<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.padcmyanmar.curiositys.CuriosityScreen"
    android:background="@drawable/starsky">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_curiosity"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/curiositylogo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/btn_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textColor="#ffffff"
                android:text="@string/facebook_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="#a5204ee3"
                android:drawableLeft="@drawable/fb"/>

            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/google_login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:background="#a52f70f1"
                android:drawableLeft="@drawable/google" />

            <Button
                android:id="@+id/btn_twitter_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/twitter_login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:background="#a51c95db"
                android:drawableLeft="@drawable/twitterr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_email_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/signup_email"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:background="#cc7d7e88"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/mail" />

                <Button
                    android:id="@+id/btn_email_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="70dp"
                    android:text="@string/signin_email"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:background="#cc7d7e88"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/mail" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_terms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/terms_conditions"
                android:gravity="center"
                android:textColor="#ffffff" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
